Fixed menu display on tablets.

--- a/css/fsutheme-alpha-default-narrow.css
+++ b/css/fsutheme-alpha-default-narrow.css
@@ -163,7 +163,7 @@ div#zone-menu {
 div#zone-menu a, a:visited {
   color: #000;
   padding: 16px 12px 14px 12px;
-  font-size: 94%;
+  font-size: 90%;
 }
 
 div#zone-menu a.active {
